# captainslog

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/captainslog/: __main__.py  db.py  server.py
